--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "caseaf-template",
   "private": true,
+  "homepage": "https://skogblad.github.io/JobMatch",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/node": "^24.6.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
